--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -8,6 +8,7 @@
     <servlet-name>HelloWorld</servlet-name>
     <url-pattern>/hello</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>Counter</servlet-name>
     <servlet-class>Counter</servlet-class>
@@ -16,4 +17,23 @@
     <servlet-name>Counter</servlet-name>
     <url-pattern>/counter</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>GetParametersHtml</servlet-name>
+    <servlet-class>GetParametersHtml</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetParametersHtml</servlet-name>
+    <url-pattern>/getParametersHtml</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>GetParametersServlet</servlet-name>
+    <servlet-class>GetParametersServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetParametersServlet</servlet-name>
+    <url-pattern>/getParametersServlet</url-pattern>
+  </servlet-mapping>
+
 </web-app>
